--- a/src/PeekF1/PeekF1Shared/VSPackage.resx
+++ b/src/PeekF1/PeekF1Shared/VSPackage.resx
@@ -135,6 +135,6 @@
     <value>Peek F1</value>
   </data>
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Package.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\SharedFiles\Resources\Package.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
